# ai-dialogue

./: .env.example  .gitignore  BILLING_TROUBLESHOOTING.md  CLAUDE.md  CONTRIBUTING.md  FINAL-SUMMARY.md  HANDOFF.md  LICENSE  PHASE_STATUS.md  README.md  SPEC-COMPLETION-SUMMARY.md  TESTING-README.md  XAI-RESEARCH-COMPLETE.md  category-theory-research.md  cli.py  hkt-implementation-plan.md  hkt-research.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_detailed.py  test_api_diagnostic.py  test_live_api.py  test_xai_sdk_style.py
.github/workflows/: ci.yml
docs/: API-FINDINGS.md  CODE_QUALITY_VERIFICATION.md  CURRENT-STATUS.md  FEATURE-MATRIX.md  GROK-COMMAND-EXECUTIVE-SUMMARY.md  GROK-COMMAND-SYSTEMS-ANALYSIS.md  GROK-COMMANDS-FINAL-SUMMARY.md  GROK-QUICK-REFERENCE.md  HKT-TEAM-PRESENTATION.md  IMPLEMENTATION-SUMMARY.md  MANUAL_CODE_REVIEW.md  MERCURIO-ANALYSIS.md  MIGRATION-GUIDE.md  PHASE3_TEST_ANALYSIS.md  PHASE4-TEST-PLAN.md  QA_VERIFICATION_COMPLETE.md  README.md  ROADMAP.md  SPEC-UPDATED.md  SPEC.md  TESTING-GUIDE.md  TEST_DEPTH_ANALYSIS.md  XAI-CAPABILITIES-AND-GAPS.md
docs/archive/: GROK-NEW-FEATURES-ASPIRATIONAL.md  README.md
docs/project-history/: PR_DESCRIPTION.md  READY-FOR-TESTING.md  STABILIZATION-SUMMARY.md  START-HERE.md  TESTS-COMPLETE.md  (+1 more)
examples/: enhanced_research.py  example_usage.py
specs/: ADVANCED-CAPABILITIES-SPEC.md  CLARIFICATIONS.md  CONSTITUTION.md  CORE-ARCHITECTURE-SPEC.md  README.md  TECHNICAL-PLAN.md  VALIDATION-CHECKLIST.md
src/: __init__.py  dynamic_protocol.py  intelligent_orchestrator.py  protocol.py  state.py
tests/: manual_test.py  simple_test.py  test_adapters.py  test_cli.py  test_dynamic_protocol.py  test_grok_client_comprehensive.py  test_grok_enhanced.py  test_live_api.py  test_phase3_features.py  test_protocol.py  test_protocol_modes.py  test_quick_integration.py  test_state_manager.py
tools/: grok_code_analysis.py
(+48 files in other folders)
